tests/sksl/errors/golden/GrNoFragmentProcessorConstruction.cpp
### Compilation failed:

error: 4: cannot construct 'fragmentProcessor'
1 error
